src/bindings_linux_armv8.rs

    ["Offset of field: ft_program_data::DSlowSlew"]
        [::std::mem::offset_of!(ft_program_data, DSlowSlew) - 137usize];
    ["Offset of field: ft_program_data::DSchmittInput"]
        [::std::mem::offset_of!(ft_program_data, DSchmittInput) - 138usize];
    ["Offset of field: ft_program_data::DDriveCurrent"]
        [::std::mem::offset_of!(ft_program_data, DDriveCurrent) - 139usize];
    ["Offset of field: ft_program_data::ARIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, ARIIsTXDEN) - 140usize];
    ["Offset of field: ft_program_data::BRIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, BRIIsTXDEN) - 141usize];
    ["Offset of field: ft_program_data::CRIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, CRIIsTXDEN) - 142usize];
    ["Offset of field: ft_program_data::DRIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, DRIIsTXDEN) - 143usize];
    ["Offset of field: ft_program_data::AIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, AIsVCP8) - 144usize];
    ["Offset of field: ft_program_data::BIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, BIsVCP8) - 145usize];
    ["Offset of field: ft_program_data::CIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, CIsVCP8) - 146usize];
    ["Offset of field: ft_program_data::DIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, DIsVCP8) - 147usize];
    ["Offset of field: ft_program_data::PullDownEnableH"]
        [::std::mem::offset_of!(ft_program_data, PullDownEnableH) - 148usize];
    ["Offset of field: ft_program_data::SerNumEnableH"]
        [::std::mem::offset_of!(ft_program_data, SerNumEnableH) - 149usize];
    ["Offset of field: ft_program_data::ACSlowSlewH"]
        [::std::mem::offset_of!(ft_program_data, ACSlowSlewH) - 150usize];
    ["Offset of field: ft_program_data::ACSchmittInputH"]
        [::std::mem::offset_of!(ft_program_data, ACSchmittInputH) - 151usize];
    ["Offset of field: ft_program_data::ACDriveCurrentH"]
        [::std::mem::offset_of!(ft_program_data, ACDriveCurrentH) - 152usize];
    ["Offset of field: ft_program_data::ADSlowSlewH"]
        [::std::mem::offset_of!(ft_program_data, ADSlowSlewH) - 153usize];
    ["Offset of field: ft_program_data::ADSchmittInputH"]
        [::std::mem::offset_of!(ft_program_data, ADSchmittInputH) - 154usize];
    ["Offset of field: ft_program_data::ADDriveCurrentH"]
        [::std::mem::offset_of!(ft_program_data, ADDriveCurrentH) - 155usize];
    ["Offset of field: ft_program_data::Cbus0H"]
        [::std::mem::offset_of!(ft_program_data, Cbus0H) - 156usize];
    ["Offset of field: ft_program_data::Cbus1H"]
        [::std::mem::offset_of!(ft_program_data, Cbus1H) - 157usize];
    ["Offset of field: ft_program_data::Cbus2H"]
        [::std::mem::offset_of!(ft_program_data, Cbus2H) - 158usize];
    ["Offset of field: ft_program_data::Cbus3H"]
        [::std::mem::offset_of!(ft_program_data, Cbus3H) - 159usize];
    ["Offset of field: ft_program_data::Cbus4H"]
        [::std::mem::offset_of!(ft_program_data, Cbus4H) - 160usize];
    ["Offset of field: ft_program_data::Cbus5H"]
        [::std::mem::offset_of!(ft_program_data, Cbus5H) - 161usize];
    ["Offset of field: ft_program_data::Cbus6H"]
        [::std::mem::offset_of!(ft_program_data, Cbus6H) - 162usize];
    ["Offset of field: ft_program_data::Cbus7H"]
        [::std::mem::offset_of!(ft_program_data, Cbus7H) - 163usize];
    ["Offset of field: ft_program_data::Cbus8H"]
        [::std::mem::offset_of!(ft_program_data, Cbus8H) - 164usize];
    ["Offset of field: ft_program_data::Cbus9H"]
        [::std::mem::offset_of!(ft_program_data, Cbus9H) - 165usize];
    ["Offset of field: ft_program_data::IsFifoH"]
        [::std::mem::offset_of!(ft_program_data, IsFifoH) - 166usize];
    ["Offset of field: ft_program_data::IsFifoTarH"]
        [::std::mem::offset_of!(ft_program_data, IsFifoTarH) - 167usize];
    ["Offset of field: ft_program_data::IsFastSerH"]
        [::std::mem::offset_of!(ft_program_data, IsFastSerH) - 168usize];
    ["Offset of field: ft_program_data::IsFT1248H"]
        [::std::mem::offset_of!(ft_program_data, IsFT1248H) - 169usize];
    ["Offset of field: ft_program_data::FT1248CpolH"]
        [::std::mem::offset_of!(ft_program_data, FT1248CpolH) - 170usize];
    ["Offset of field: ft_program_data::FT1248LsbH"]
        [::std::mem::offset_of!(ft_program_data, FT1248LsbH) - 171usize];
    ["Offset of field: ft_program_data::FT1248FlowControlH"]
        [::std::mem::offset_of!(ft_program_data, FT1248FlowControlH) - 172usize];
    ["Offset of field: ft_program_data::IsVCPH"]
        [::std::mem::offset_of!(ft_program_data, IsVCPH) - 173usize];
    ["Offset of field: ft_program_data::PowerSaveEnableH"]
        [::std::mem::offset_of!(ft_program_data, PowerSaveEnableH) - 174usize];
};
impl Default for ft_program_data {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[doc = " Structure to hold program data for FT_EE_Program, FT_EE_ProgramEx, FT_EE_Read\n and FT_EE_ReadEx functions.\n @see FT_EE_Read\n @see FT_EE_ReadEx\n @see FT_EE_Program\n @see FT_EE_ProgramEx"]
pub type FT_PROGRAM_DATA = ft_program_data;
#[doc = " Structure to hold program data for FT_EE_Program, FT_EE_ProgramEx, FT_EE_Read\n and FT_EE_ReadEx functions.\n @see FT_EE_Read\n @see FT_EE_ReadEx\n @see FT_EE_Program\n @see FT_EE_ProgramEx"]
pub type PFT_PROGRAM_DATA = *mut ft_program_data;
unsafe extern "C" {
    #[doc = " @noop FT_EE_Read\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Read the contents of the EEPROM.\n @param ftHandle Handle of the device.\n @param pData Pointer to structure of type FT_PROGRAM_DATA.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function interprets the parameter pData as a pointer to a structure of type FT_PROGRAM_DATA\n that contains storage for the data to be read from the EEPROM.\n @n The function does not perform any checks on buffer sizes, so the buffers passed in the\n FT_PROGRAM_DATA structure must be big enough to accommodate their respective strings (including\n null terminators). The sizes shown in the following example are more than adequate and can be rounded\n down if necessary. The restriction is that the Manufacturer string length plus the Description string\n length is less than or equal to 40 characters.\n @note Note that the DLL must be informed which version of the FT_PROGRAM_DATA structure is being used.\n This is done through the Signature1, Signature2 and Version elements of the structure. Signature1\n should always be 0x00000000, Signature2 should always be 0xFFFFFFFF and Version can be set to use\n whichever version is required. For compatibility with all current devices Version should be set to the\n latest version of the FT_PROGRAM_DATA structure which is defined in FTD2XX.h.\n @see FT_PROGRAM_DATA"]
    pub fn FT_EE_Read(ftHandle: FT_HANDLE, pData: PFT_PROGRAM_DATA) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_EE_ReadEx\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Read the contents of the EEPROM and pass strings separately.\n @param ftHandle Handle of the device.\n @param pData Pointer to structure of type FT_PROGRAM_DATA.\n @param *Manufacturer Pointer to a null-terminated string containing the manufacturer name.\n @param *ManufacturerId Pointer to a null-terminated string containing the manufacturer ID.\n @param *Description Pointer to a null-terminated string containing the device description.\n @param *SerialNumber Pointer to a null-terminated string containing the device serial number.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This variation of the standard FT_EE_Read function was included to provide support for languages such\n as LabVIEW where problems can occur when string pointers are contained in a structure.\n @n This function interprets the parameter pData as a pointer to a structure of type FT_PROGRAM_DATA that\n contains storage for the data to be read from the EEPROM.\n @n The function does not perform any checks on buffer sizes, so the buffers passed in the\n FT_PROGRAM_DATA structure must be big enough to accommodate their respective strings (including\n null terminators).\n @note Note that the DLL must be informed which version of the FT_PROGRAM_DATA structure is being used.\n This is done through the Signature1, Signature2 and Version elements of the structure. Signature1\n should always be 0x00000000, Signature2 should always be 0xFFFFFFFF and Version can be set to use\n whichever version is required. For compatibility with all current devices Version should be set to the\n latest version of the FT_PROGRAM_DATA structure which is defined in FTD2XX.h.\n @n The string parameters in the FT_PROGRAM_DATA structure should be passed as DWORDs to avoid\n overlapping of parameters. All string pointers are passed out separately from the FT_PROGRAM_DATA\n structure.\n @see FT_PROGRAM_DATA"]
    pub fn FT_EE_ReadEx(
        ftHandle: FT_HANDLE,
        pData: PFT_PROGRAM_DATA,
        Manufacturer: *mut ::std::os::raw::c_char,
        ManufacturerId: *mut ::std::os::raw::c_char,
        Description: *mut ::std::os::raw::c_char,
        SerialNumber: *mut ::std::os::raw::c_char,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_EE_Program\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Program the EEPROM.\n @param ftHandle Handle of the device.\n @param pData Pointer to structure of type FT_PROGRAM_DATA.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function interprets the parameter pData as a pointer to a structure of type FT_PROGRAM_DATA\n that\tcontains the data to write to the EEPROM. The data is written to EEPROM, then read back and\n verified.\n @n If the SerialNumber field in FT_PROGRAM_DATA is NULL, or SerialNumber points to a NULL string,\n a serial number based on the ManufacturerId and the current date and time will be generated. The\n Manufacturer string length plus the Description string length must be less than or equal to 40\n characters.\n @note Note that the DLL must be informed which version of the FT_PROGRAM_DATA structure is being\n used. This is done through the Signature1, Signature2 and Version elements of the structure.\n Signature1 should always be 0x00000000, Signature2 should always be 0xFFFFFFFF and Version can be\n set to use whichever version is required. For compatibility with all current devices Version\n should be set to the latest version of the FT_PROGRAM_DATA structure which is defined in FTD2XX.h.\n If pData is NULL, the structure version will default to 0 (original BM series) and the device will\n be programmed with the default data.\n @see FT_PROGRAM_DATA"]
    pub fn FT_EE_Program(ftHandle: FT_HANDLE, pData: PFT_PROGRAM_DATA) -> FT_STATUS;
}
